# Meme

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: skeleton_debugger.py  streamlit_app.py
capture/: arkit_receiver.py  debug_view.py  face_mediapipe.py  hands_mediapipe.py  pose_mediapipe.py  skeleton.py  webcam.py
evaluation/: gesture_eval.py
features/: face_features.py  skeleton_buffer.py  skeleton_features.py  temporal_smoothing.py
meme_db/: __init__.py  auto_label_memes.py  build_index.py  embed_memes.py  load_dataset.py  retrieve.py  schema.py
models/: face_encoder.py  fusion_ranker.py  hand_classifier.py  motion_encoder.py  motion_rules.py
scripts/: download_model.sh  eval_hagrid.py  eval_ntu.py  label_session.py  recommend_demo.py  recommend_session.py  replay_session.py  train_hand_classifier.py
tests/: test_features.py  test_fusion_ranker.py  test_gestures.py  test_hand_classifier.py  test_ntu_ingest.py  test_pose.py  test_retrieval.py  test_skeleton.py
