[project]
name = "meme-motion"
version = "0.1.0"
description = "Pose-driven reaction-meme prototype (Sprint 1: skeleton debugger)"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
